Completed method to get location of seven wonders

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
       <main>
         <section class="current-pets">
-          <h1>List of Coordinates</h1>
-          <button id="load">Get coordinates!</button>
+          <h1>List of Seven Wonders</h1>
+          <button id="load">Get Seven Wonders!</button>
           <ul id="coordinate-list"></ul>
         </section>
       </main>
